serde-implicit/tests/ui/missing_tags.stderr
error: missing `#[serde_implicit(tag)]`
 --> tests/ui/missing_tags.rs:3:16
  |
3 |       MissingTag {
  |  ________________^
4 | |         field1: String,
5 | |         field2: bool,
6 | |         value: u32,
7 | |     },
  | |_____^
